[gd_scene load_steps=25 format=3 uid="uid://fhmwenm3h7c7"]

[ext_resource type="Script" path="res://game.gd" id="1_f0dd8"]
[ext_resource type="Texture2D" uid="uid://oogt24347qv7" path="res://images/bg_640x480.png" id="2_5eohq"]
[ext_resource type="FontFile" uid="uid://vpxsj0e6x6lk" path="res://fonts/menu_font.ttf" id="2_rssi8"]
[ext_resource type="Texture2D" uid="uid://c3msrgw8yn1n4" path="res://images/menu_button_lvl_empty.png" id="3_eonvc"]
[ext_resource type="Texture2D" uid="uid://c86rrp0hau4hr" path="res://images/menu_button_empty.png" id="5_8wxpr"]
[ext_resource type="Texture2D" uid="uid://iaumk5tbsbn1" path="res://images/tile_24x24_I_opaque.png" id="6_psk2b"]
[ext_resource type="Texture2D" uid="uid://bfb2by036wdfm" path="res://images/tile_24x24_T_opaque.png" id="7_ujjlr"]
[ext_resource type="Script" path="res://Tiles/StraightTile.gd" id="7_wyg0a"]
[ext_resource type="Texture2D" uid="uid://dgumx31nso486" path="res://images/tile_24x24_L_opaque.png" id="8_l0vv8"]
[ext_resource type="Script" path="res://Tiles/TTile.gd" id="9_1vo7x"]
[ext_resource type="Texture2D" uid="uid://gp7xpxacd1ql" path="res://images/tile_24x24_cross_opaque.png" id="9_yodhl"]
[ext_resource type="Texture2D" uid="uid://c6klyd06qogb" path="res://images/tile_24x24_anti_opaque.png" id="10_wju1l"]
[ext_resource type="Script" path="res://Tiles/LTile.gd" id="11_cprsa"]
[ext_resource type="Texture2D" uid="uid://drv2yvqyelnkb" path="res://images/sprite sheets/sprite_sheet_winning_animation.png" id="12_tg20q"]
[ext_resource type="Script" path="res://Tiles/CrossTile.gd" id="13_f2vtf"]
[ext_resource type="Texture2D" uid="uid://devomnujdn5pj" path="res://images/sprite sheets/sprite_sheet_losing_animation.png" id="13_vb37n"]
[ext_resource type="Script" path="res://Tiles/AntiTile.gd" id="15_62jrv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qjq1"]

[sub_resource type="Animation" id="Animation_3pn8e"]
length = 0.001
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u8huv"]
resource_name = "winning"
length = 5.0
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 119]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fj7jl"]
_data = {
"RESET": SubResource("Animation_3pn8e"),
"winning": SubResource("Animation_u8huv")
}

[sub_resource type="Animation" id="Animation_ujscq"]
length = 0.001
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1jl2t"]
resource_name = "losing"
length = 6.75
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 161]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lblpr"]
_data = {
"RESET": SubResource("Animation_ujscq"),
"losing": SubResource("Animation_1jl2t")
}

[node name="Game" type="Node2D"]
texture_filter = 1
script = ExtResource("1_f0dd8")

[node name="LeverPicker" type="MarginContainer" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="LeverPicker"]
layout_mode = 2

[node name="ExitLevelPicker" type="Button" parent="LeverPicker/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_rssi8")
theme_override_font_sizes/font_size = 64
text = "Iks"
icon = ExtResource("3_eonvc")
flat = true
icon_alignment = 1

[node name="Base" type="Button" parent="LeverPicker/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Base"
icon = ExtResource("5_8wxpr")
flat = true
icon_alignment = 1

[node name="Custom" type="Button" parent="LeverPicker/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Custom"
icon = ExtResource("5_8wxpr")
flat = true
icon_alignment = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -480.0
offset_right = 640.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5eohq")

[node name="ExitLevel" type="Button" parent="."]
visible = false
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("2_rssi8")
theme_override_font_sizes/font_size = 64
text = "Iks"
icon = ExtResource("3_eonvc")
flat = true
icon_alignment = 1

[node name="TilePicker" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 480.0
offset_right = 640.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="TilePicker"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Container" type="Control" parent="TilePicker/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Area2D" type="Area2D" parent="TilePicker/VBoxContainer/Container"]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TilePicker/VBoxContainer/Container/Area2D"]
shape = SubResource("RectangleShape2D_5qjq1")

[node name="StraightTile" type="Sprite2D" parent="TilePicker/VBoxContainer/Container/Area2D"]
texture = ExtResource("6_psk2b")
script = ExtResource("7_wyg0a")

[node name="Container2" type="Control" parent="TilePicker/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Area2D" type="Area2D" parent="TilePicker/VBoxContainer/Container2"]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TilePicker/VBoxContainer/Container2/Area2D"]
shape = SubResource("RectangleShape2D_5qjq1")

[node name="TTile" type="Sprite2D" parent="TilePicker/VBoxContainer/Container2/Area2D"]
texture = ExtResource("7_ujjlr")
script = ExtResource("9_1vo7x")

[node name="Container3" type="Control" parent="TilePicker/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Area2D" type="Area2D" parent="TilePicker/VBoxContainer/Container3"]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TilePicker/VBoxContainer/Container3/Area2D"]
shape = SubResource("RectangleShape2D_5qjq1")

[node name="LTile" type="Sprite2D" parent="TilePicker/VBoxContainer/Container3/Area2D"]
texture = ExtResource("8_l0vv8")
script = ExtResource("11_cprsa")

[node name="Container4" type="Control" parent="TilePicker/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Area2D" type="Area2D" parent="TilePicker/VBoxContainer/Container4"]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TilePicker/VBoxContainer/Container4/Area2D"]
shape = SubResource("RectangleShape2D_5qjq1")

[node name="CrossTile" type="Sprite2D" parent="TilePicker/VBoxContainer/Container4/Area2D"]
texture = ExtResource("9_yodhl")
script = ExtResource("13_f2vtf")

[node name="Container5" type="Control" parent="TilePicker/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Area2D" type="Area2D" parent="TilePicker/VBoxContainer/Container5"]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TilePicker/VBoxContainer/Container5/Area2D"]
shape = SubResource("RectangleShape2D_5qjq1")

[node name="AntiTile" type="Sprite2D" parent="TilePicker/VBoxContainer/Container5/Area2D"]
texture = ExtResource("10_wju1l")
script = ExtResource("15_62jrv")

[node name="VictoryScreen" type="ColorRect" parent="."]
visible = false
offset_left = 105.0
offset_top = 103.0
offset_right = 517.0
offset_bottom = 401.0
color = Color(0.321569, 0.47451, 0.435294, 1)

[node name="MarginContainer" type="MarginContainer" parent="VictoryScreen"]
layout_mode = 2
offset_left = 75.0
offset_top = 78.0
offset_right = 342.0
offset_bottom = 108.0
size_flags_vertical = 3

[node name="LevelComplete" type="Label" parent="VictoryScreen/MarginContainer"]
layout_mode = 2
text = "Level complete!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="VictoryScreen"]
layout_mode = 2
offset_left = 86.0
offset_top = 129.0
offset_right = 331.0
offset_bottom = 224.0
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 4.15

[node name="NextLevel" type="Button" parent="VictoryScreen/MenuButtons"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_rssi8")
theme_override_font_sizes/font_size = 60
text = "Next level"
icon = ExtResource("5_8wxpr")
flat = true
icon_alignment = 1

[node name="LoserScreen" type="ColorRect" parent="."]
visible = false
offset_left = 105.0
offset_top = 103.0
offset_right = 517.0
offset_bottom = 401.0
color = Color(0.321569, 0.47451, 0.435294, 1)

[node name="MarginContainer" type="MarginContainer" parent="LoserScreen"]
layout_mode = 2
offset_left = 75.0
offset_top = 78.0
offset_right = 342.0
offset_bottom = 108.0
size_flags_vertical = 3

[node name="LolLoser" type="Label" parent="LoserScreen/MarginContainer"]
layout_mode = 2
text = "Lol, loser"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="LoserScreen"]
layout_mode = 2
offset_left = 86.0
offset_top = 129.0
offset_right = 331.0
offset_bottom = 224.0
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 4.15

[node name="Retry" type="Button" parent="LoserScreen/MenuButtons"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_rssi8")
theme_override_font_sizes/font_size = 60
text = "Retry"
icon = ExtResource("5_8wxpr")
flat = true
icon_alignment = 1

[node name="Sprite2DWinning" type="Sprite2D" parent="."]
visible = false
z_index = 1
texture_filter = 1
texture = ExtResource("12_tg20q")
hframes = 120

[node name="AnimationPlayerWinning" type="AnimationPlayer" parent="Sprite2DWinning"]
libraries = {
"": SubResource("AnimationLibrary_fj7jl")
}

[node name="Sprite2DLosing" type="Sprite2D" parent="."]
visible = false
z_index = 1
texture_filter = 1
texture = ExtResource("13_vb37n")
hframes = 162

[node name="AnimationPlayerLosing" type="AnimationPlayer" parent="Sprite2DLosing"]
libraries = {
"": SubResource("AnimationLibrary_lblpr")
}

[node name="Credits" type="ColorRect" parent="."]
visible = false
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.792157, 0.823529, 0.772549, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 480.0
offset_right = 640.0
offset_bottom = 1480.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_rssi8")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]You won.



Congratulations.



Developers:

Bartanakin	

feargrinn

timorl

Regnihov


Thank you for playing :)[/center]"

[connection signal="pressed" from="LeverPicker/VBoxContainer/ExitLevelPicker" to="." method="_on_exit_level_picker_pressed"]
[connection signal="pressed" from="LeverPicker/VBoxContainer/Base" to="." method="_on_base_pressed"]
[connection signal="pressed" from="LeverPicker/VBoxContainer/Custom" to="." method="_on_custom_pressed"]
[connection signal="pressed" from="ExitLevel" to="." method="_on_exit_level_pressed"]
[connection signal="pressed" from="VictoryScreen/MenuButtons/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="LoserScreen/MenuButtons/Retry" to="." method="_on_retry_pressed"]
[connection signal="animation_finished" from="Sprite2DWinning/AnimationPlayerWinning" to="." method="_on_animation_player_winning_animation_finished"]
[connection signal="animation_finished" from="Sprite2DLosing/AnimationPlayerLosing" to="." method="_on_animation_player_losing_animation_finished"]
